Products.CMFCore Changelog
==========================

2.2.0 (unreleased)
------------------

- WorkflowTool: Passing the "magic" chain name "(Default)" to the
  setChainForPortalTypes method did not set the chain to the default 
  chain value as expected.
  (https://bugs.launchpad.net/zope-cmf/+bug/161702)

- ZMI: Prevent users from creating content through the ZMI by hiding the
  entry for "CMFCore Content".

- utils: Add a new optional argument to ContentInit that allows hiding
  a content item's ZMI add list entry. The default is to leave the item
  visible, which reflects the previous behavior.

- FSMetadata: Remove handling of .security and .properties metadata
  files which was supposed to have been removed in CMF 2.0 already.

- SkinsTool: Added the ability to do a diff comparison between items
  found using the portal_skins "Find" ZMI tab.
  (https://bugs.launchpad.net/zope-cmf/+bug/238489)

- fiveactionstool: fix typo in a method name that isn't even used in the CMF 
  or Plone.
  (https://bugs.launchpad.net/zope-cmf/+bug/257259)

- TypeInformation and TypesTool: Added support for add view actions.
  Type infos now have a new 'add_view_expr' property and implement IAction.
  'listActions' of the types tool includes type infos as 'add' actions if
  an add view URL is specified.

- interfaces: Fixed some docstrings.
  There is no IActionInformation. ActionInformation is an old action class
  that implements IAction, non-persistent IActionInfo objects adapt action
  objects to a given context.

- FSSTXMethod: Fixed Zope 2.12 compatibility.
  zope.structuredtext is now used instead of StructuredText.

- removed the five.localsitemanager svn:external and its import hack
  in favor of stating the dependency for separate installation in
  DEPENDENCIES.txt and automatic installation in setup.py.

- TypesTool: Refactored content creation.
  Moved addCreator call to IObjectCreatedEvent handler and moved