@@ -239,7 +239,7 @@ class ActionProviderBaseTests(SecurityRequestTest):
     def test_listActionInfos(self):
         wanted = [{'id': 'an_id', 'title': 'A Title', 'description': '',
                    'url': '', 'category': 'object', 'visible': False,
-                   'available': True, 'allowed': True}]
+                   'available': True, 'allowed': True, 'icon': ''}]
 
         apb = self.site._setObject( 'portal_apb', self._makeProvider(1) )
         rval = apb.listActionInfos()
@@ -260,7 +260,7 @@ class ActionProviderBaseTests(SecurityRequestTest):
     def test_getActionInfo(self):
         wanted = {'id': 'an_id', 'title': 'A Title', 'description': '',
                   'url': '', 'category': 'object', 'visible': False,
-                  'available': True, 'allowed': True}
+                  'available': True, 'allowed': True, 'icon': ''}
 
         apb = self.site._setObject( 'portal_apb', self._makeProvider(1) )
         rval = apb.getActionInfo( ('object/an_id',) )
